# babel-tool

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
.github/workflows/: ci.yml
babel/: __init__.py  cli.py  config.py
babel/commands/: __init__.py  base.py  capture.py  check.py  coherence.py  config_cmd.py  deprecate.py  gaps.py  gather_cmd.py  git_cmd.py  history.py  init_cmd.py  link.py  list_cmd.py  map_cmd.py  memo_cmd.py  prompt.py  questions.py  review.py  skill_cmd.py  status.py  suggest_links.py  tensions.py  validation.py  why.py
babel/content/: __init__.py  help_text.py  principles_text.py  prompts.py
babel/core/: __init__.py  commit_links.py  domains.py  events.py  graph.py  horizon.py  loader.py  refs.py  resolver.py  scope.py  symbols.py  tokenizer.py  vocabulary.py
babel/core/parsing/: __init__.py  config.py  exclusions.py  extractor.py  registry.py
babel/core/parsing/languages/: __init__.py  css.py  html.py  javascript.py  python.py  typescript.py
babel/gather/: __init__.py  broker.py  functions.py  gatherer.py  plan.py  result.py  safety.py  template.py
babel/manual/: babel_system_prompt.md  capture.md  challenge.md  coherence.md  config.md  gaps.md  gather.md  help.md  history.md  hooks.md  init.md  link.md  list.md  map.md  memo.md  principles.md  prompt.md  question.md  questions.md  review.md  scan.md  share.md  status.md  suggest-links.md  summary.md  sync.md  tensions.md  validation.md  why.md
babel/orchestrator/: __init__.py  aggregator.py  config.py  metrics.py  pools.py  scheduler.py  task.py
babel/output/: __init__.py  base.py  detail.py  json.py  list.py  summary.py  table.py
babel/preferences/: __init__.py  memo.py
babel/presentation/: __init__.py  codec.py  digest.py  formatters.py  succession.py  symbols.py  template.py
babel/prompts/: system_prompt.md  system_prompt_mini.md
babel/services/: __init__.py  benchmark.py  extractor.py  git.py  ide.py  providers.py  scanner.py  skills.py
babel/skills/: __init__.py
babel/skills/analyze/: architecture-review.yaml  dependency-audit.yaml  expert-query.yaml  health-check.yaml  performance-review.yaml  security-audit.yaml
babel/skills/knowledge/: connect.yaml  recall.yaml  remember.yaml  spec.yaml  uncertain.yaml
babel/skills/lifecycle/: continue.yaml  orient.yaml  start-new.yaml  verify.yaml
babel/skills/maintenance/: discover.yaml  git-babel.yaml  maintain.yaml
babel/skills/preference/: init-memo.yaml  preference.yaml
babel/skills/protocols/: ai-safe.yaml  batch.yaml  code-mod.yaml  dual-display.yaml  output-format.yaml  verbatim.yaml
babel/skills/validation/: challenge.yaml  revise.yaml  strengthen.yaml  tension.yaml  validate.yaml
babel/tracking/: __init__.py  ambiguity.py  coherence.py  principles.py  tensions.py  validation.py
babel/utils/: __init__.py  pagination.py
manual/: babel_system_prompt.md  capture-commit.md  capture.md  challenge.md  check.md  coherence.md  config.md  deprecate.md  gaps.md  gather.md  history.md  link.md  list.md  map.md  memo.md  process-queue.md  questions.md  review.md  scan.md  share.md  skill.md  status.md  suggest-links.md  tensions.md  validation.md  why.md
tests/: __init__.py  conftest.py  factories.py  test_ambiguity.py  test_benchmark.py  test_capture.py  test_check.py  test_codec.py  test_coherence.py  test_commit_links.py  test_config.py  test_config_cmd.py  test_cross_domain.py  test_deprecate.py  test_deprecation.py  test_digest.py  test_domains.py  test_events.py  test_extractor.py  test_formatters.py  test_gaps.py  test_gather.py  test_gather_cmd.py  test_git.py  test_git_cmd.py  test_graph.py  test_health.py  test_history.py  test_horizon.py  test_init_cmd.py  test_link.py  test_list_cmd.py  test_memo.py  test_memo_cmd.py  test_orchestrator.py  test_pagination.py  test_parsing.py  test_prompt.py  test_providers.py  test_questions.py  (+16 more)
